# LCardQt

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  LCard_global.h  api11.cpp  api11.h  crate.cpp  crate.h  create.cpp  create.h  ilcmodule.h  lcard.cpp  lcard.h  lcenums.cpp  lcenums.h  lctypes.cpp  lctypes.h  ltr11.cpp  ltr11.h  ltrbase.cpp  ltrbase.h  ltrworker.cpp  ltrworker.h  worker.cpp  worker.h  workerpool.cpp  workerpool.h
tests/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  tst_test1.cpp
